--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Standards-Version: 3.9.2
 
 Package: dcs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, dpkg-dev
 Description: Debian Code Search
  Server binaries, tools and templates/static assets to run Debian Code Search.
 
