service files: log stderr to journal, restart on failure

--- a/dcs-index-backend@.service
+++ b/dcs-index-backend@.service
@@ -7,6 +7,9 @@ Group=dcs
 ExecStart=/usr/bin/index-backend -listen=:2908%i -indexpath=/dcs/index.%i.idx
 # Since logging is very verbose, we log to /dev/null for now
 StandardOutput=null
+StandardError=journal
+RestartSec=1
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
