--- a/dcs-web.service
+++ b/dcs-web.service
@@ -9,6 +9,9 @@ ExecStart=/usr/bin/dcs-web \
 	-index_backends=localhost:29080,localhost:29081,localhost:29082,localhost:29083,localhost:29084,localhost:29085
 # Since logging is very verbose, we log to /dev/null for now
 StandardOutput=null
+StandardError=journal
+RestartSec=1
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
