--- a/debian/rules
+++ b/debian/rules
@@ -17,7 +17,7 @@
 export DH_OPTIONS
 
 override_dh_auto_build:
-	GOPATH=$(CURDIR):/home/michael/gocode go install -v dcs/cmd/...
+	GOPATH=$(CURDIR):$(GOPATH) go install -v dcs/cmd/...
 
 %:
 	dh $@ 
