add the dcs-web build date to dcs result pages

--- a/debian/rules
+++ b/debian/rules
@@ -17,7 +17,7 @@
 export DH_OPTIONS
 
 override_dh_auto_build:
-	GOPATH=$(CURDIR):$(GOPATH) go install -v dcs/cmd/...
+	GOPATH=$(CURDIR):$(GOPATH) go install -ldflags "-X dcs/cmd/dcs-web/common.Version $(shell date -u +%Y-%m-%d.%H%M)" -v dcs/cmd/...
 
 %:
 	dh $@ 
