--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: dcs
 Section: net
 Priority: extra
 Maintainer: Michael Stapelberg <stapelberg@debian.org>
-Build-Depends: debhelper (>= 8.0.0)
+Build-Depends: debhelper (>= 8.0.0), golang-pq-dev, golang-go
 Standards-Version: 3.9.2
 #Vcs-Git: git://git.debian.org/collab-maint/dcs.git
 #Vcs-Browser: http://git.debian.org/?p=collab-maint/dcs.git;a=summary
@@ -10,6 +10,7 @@ Standards-Version: 3.9.2
 Package: dcs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, dpkg-dev
+Built-Using: ${misc:Built-Using}
 Description: Debian Code Search
  Server binaries, tools and templates/static assets to run Debian Code Search.
 
