--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: dcs
 Section: net
 Priority: extra
 Maintainer: Michael Stapelberg <stapelberg@debian.org>
-Build-Depends: debhelper (>= 8.0.0), golang-go, golang-pq-dev, golang-codesearch-dev, golang-godebiancontrol-dev
+Build-Depends: debhelper (>= 8.0.0), golang-go, golang-pq-dev, golang-codesearch-dev, golang-godebiancontrol-dev, dh-golang
 Standards-Version: 3.9.2
 #Vcs-Git: git://git.debian.org/collab-maint/dcs.git
 #Vcs-Browser: http://git.debian.org/?p=collab-maint/dcs.git;a=summary
