unify command line flags of all binaries
My apologies to anyone actually running a DCS instance for breaking
stuff, but the previous state was a mess.

We now use underscores instead of camel case for flags consistently
(e.g. mirror_path instead of mirrorPath).

Also, flags used in multiple binaries (e.g. -listen_address,
-mirror_path, -unpacked_path) do now mean the same thing, have
consistent explanation and naming.

fixes #10

--- a/dcs-index-backend@.service
+++ b/dcs-index-backend@.service
@@ -4,7 +4,7 @@ Description=Debian Code Search: index backend
 [Service]
 User=dcs
 Group=dcs
-ExecStart=/usr/bin/index-backend -listen=:2908%i -indexpath=/dcs/index.%i.idx
+ExecStart=/usr/bin/index-backend -listen_address=:2908%i -index_path=/dcs/index.%i.idx
 # Since logging is very verbose, we log to /dev/null for now
 StandardOutput=null
 StandardError=journal
