--- a/dcs-source-backend.service
+++ b/dcs-source-backend.service
@@ -1,15 +1,10 @@
+.include /lib/systemd/system/dcs-common.service
+
 [Unit]
 Description=Debian Code Search: source backend
 
 [Service]
-User=dcs
-Group=dcs
 ExecStart=/usr/bin/source-backend -unpacked_path=/dcs/unpacked/
-# Since logging is very verbose, we log to /dev/null for now
-StandardOutput=null
-StandardError=journal
-RestartSec=1
-Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
