service files: add After=postgresql.service
Otherwise, the service might not come back up when a VM gets rebooted.

--- a/dcs-source-backend.service
+++ b/dcs-source-backend.service
@@ -2,6 +2,7 @@
 
 [Unit]
 Description=Debian Code Search: source backend
+After=postgresql.service
 
 [Service]
 ExecStart=/usr/bin/source-backend -unpacked_path=/dcs/unpacked/
