add rackspace API and dcs-rs-cleanup
Note that there are still hard-coded paths to SSH keys in the code. In
case you are actually interested in using this for setting up your own
DCS instance on rackspace, let me know and we can make it work. Until
then, this is mostly for transparency and in case the code is useful for
anyone.

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ cmd/source-backend/source-backend
 cmd/dcs-web/dcs-web
 cmd/dcsindex/dcsindex
 cmd/compute-ranking/compute-ranking
+cmd/rs-cleanup/rs-cleanup
 *.swp
