Adding conditional compilation option to disable the ranking database.
Change-Id: I81371ca13710c687dc0ed48e5f8d0cc99ccb7b00

--- a/debian/rules
+++ b/debian/rules
@@ -20,6 +20,7 @@ export DH_GOPKG := github.com/Debian/dcs
 
 override_dh_auto_build:
 	dh_auto_build -- -ldflags "-X github.com/Debian/dcs/cmd/dcs-web/common.Version $(shell date -u +%Y-%m-%d.%H%M)"
+	# adding this tag disables usage of ranking database: -tags 'no_ranking_db'
 
 # FIXME: tests currently fail
 override_dh_auto_test:
