dcs-common: set GOMAXPROCS=4 by default
The virtual machines which we are going to use have 4 cores.

--- a/dcs-common.service
+++ b/dcs-common.service
@@ -2,6 +2,7 @@
 # It should not be started directly, it is included from other files.
 
 [Service]
+Environment=GOMAXPROCS=4
 User=dcs
 Group=dcs
 # Redirecting stdout to /dev/null because it’s very verbose.
