dcs-common: allow infinite restarts
This fixes a deployment issue where dcs-source-backend does not start up
because full.idx is missing, but dcs-package-importer dies after each
merge because dcs-source-backend is not available. With infinite
restarts, this happens only once.

--- a/dcs-common.service
+++ b/dcs-common.service
@@ -11,3 +11,5 @@ StandardOutput=null
 StandardError=journal
 RestartSec=1
 Restart=on-failure
+# Allow infinite restarts, even within a short time.
+StartLimitInterval=0
