--- a/nginx.example
+++ b/nginx.example
@@ -31,6 +31,25 @@ limit_req_zone $binary_remote_addr zone=legacy:10m rate=1r/s;
 server {
     listen   80;
     listen   [::]:80 default_server ipv6only=on;
+    listen   443 ssl;
+    listen   [::]:443 ssl ipv6only=on;
+
+    ssl_certificate /etc/ssl/certs/codesearch.debian.net.crt.pem;
+    ssl_certificate_key /etc/ssl/private/codesearch.debian.net.key;
+
+    # See http://cipherli.st/
+    ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AES:RSA+3DES:!ADH:!AECDH:!MD5:!DSS;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    #add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+    # https://developer.mozilla.org/en-US/docs/Web/HTTP/X-Frame-Options
+    add_header X-Frame-Options DENY;
+    add_header X-Content-Type-Options nosniff;
+    ssl_stapling on; # Requires nginx >= 1.3.7
+    ssl_stapling_verify on; # Requires nginx => 1.3.7
+    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver_timeout 5s;
 
     root /usr/share/dcs/static;
     index index.html index.htm;
