--- a/nginx.example
+++ b/nginx.example
@@ -71,6 +71,7 @@ server {
     gzip on;
     gzip_comp_level 6;
     gzip_types *;
+    gzip_proxied any;
 
     location /nginx_status {
         auth_basic off;
@@ -93,15 +94,14 @@ server {
         proxy_pass http://dcsweb;
     }
 
-    # We serve these perfectly cacheable JSON result files directly via nginx.
-    location ~ ^/results/(.*)/(.*\.json)$ {
-        alias /dcs-ssd/query_results/$1/$2;
-        autoindex on;
-        expires 1h;
-    }
-
     location ~ ^/(perpackage-)?results/ {
         limit_req zone=one burst=3 nodelay;
+
+        set $cache_key $scheme$host$uri$is_args$args$http_accept_encoding;
+        proxy_cache main;
+        proxy_cache_key $cache_key;
+        proxy_cache_valid 1h;
+
         proxy_pass http://dcsweb;
     }
 
