Track clicks on search results.
With this commit, users who have javascript enabled and “Do Not Track”
unset/disabled will send the path/line/search term to Debian Code Search
when clicking on a search result link.

This data is stored anonymized (without IP addresses) and will be used
to evaluate/develop improved ranking algorithms.

fixes #44

--- a/nginx.example
+++ b/nginx.example
@@ -95,6 +95,12 @@ server {
         proxy_pass http://dcsweb;
     }
 
+    location = /track {
+        limit_req zone=results burst=5 nodelay;
+
+        proxy_pass http://dcsweb;
+    }
+
     location ~ ^/(perpackage-)?results/ {
         limit_req zone=results burst=5 nodelay;
 
