--- a/nginx.example
+++ b/nginx.example
@@ -38,6 +38,11 @@ server {
     server_name codesearch.debian.net;
     access_log /var/log/nginx/dcs-static.log combined;
 
+    location '/.well-known/acme-challenge' {
+        default_type "text/plain";
+        root /var/www/letsencrypt-webroot;
+    }
+
     location / {
         return 301 https://codesearch.debian.net$request_uri;
     }
