--- a/nginx.example
+++ b/nginx.example
@@ -56,10 +56,11 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/codesearch.debian.net/privkey.pem;
 
     # See http://cipherli.st/
-    ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AES:RSA+3DES:!ADH:!AECDH:!MD5:!DSS;
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:SSL:10m;
+    ssl_session_tickets off; # Requires nginx >= 1.5.9
     #add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
     # https://developer.mozilla.org/en-US/docs/Web/HTTP/X-Frame-Options
     add_header X-Frame-Options DENY;
@@ -68,6 +69,8 @@ server {
     ssl_stapling_verify on; # Requires nginx => 1.3.7
     resolver 8.8.8.8 8.8.4.4 valid=300s;
     resolver_timeout 5s;
+    ssl_ecdh_curve secp384r1; # Requires nginx >= 1.1.0
+    ssl_dhparam /etc/nginx/dhparams.pem;
 
     root /usr/share/dcs/static;
     index index.html index.htm;
