travis: specify libzmq3-dev specifically
See https://github.com/travis-ci/travis-ci/issues/982, libzmq-dev itself
is not installable:

$ sudo -E apt-get -yq --no-install-suggests --no-install-recommends --force-yes install libzmq-dev
Reading package lists...
Building dependency tree...
Reading state information...
The following extra packages will be installed:
  libzmq1
The following NEW packages will be installed:
  libzmq-dev libzmq1
0 upgraded, 2 newly installed, 0 to remove and 220 not upgraded.
Need to get 432 kB of archives.
After this operation, 1,458 kB of additional disk space will be used.
Get:1 http://ppa.launchpad.net/travis-ci/zero-mq/ubuntu/ precise/main libzmq1 amd64 3.2.2-0~travis1 [134 kB]
Get:2 http://ppa.launchpad.net/travis-ci/zero-mq/ubuntu/ precise/main libzmq-dev amd64 3.2.2-0~travis1 [298 kB]
Fetched 432 kB in 0s (770 kB/s)
Selecting previously unselected package libzmq1.
(Reading database ... 69991 files and directories currently installed.)
Unpacking libzmq1 (from .../libzmq1_3.2.2-0~travis1_amd64.deb) ...
dpkg: error processing /var/cache/apt/archives/libzmq1_3.2.2-0~travis1_amd64.deb (--unpack):
 trying to overwrite '/usr/lib/x86_64-linux-gnu/libzmq.so.3.0.0', which is also in package libzmq3 3.2.2+dfsg-1~travis1
dpkg-deb: error: subprocess paste was killed by signal (Broken pipe)
Selecting previously unselected package libzmq-dev.
Unpacking libzmq-dev (from .../libzmq-dev_3.2.2-0~travis1_amd64.deb) ...
Processing triggers for man-db ...
Errors were encountered while processing:
 /var/cache/apt/archives/libzmq1_3.2.2-0~travis1_amd64.deb
E: Sub-process /usr/bin/dpkg returned an error code (1)

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ go:
 addons:
   apt:
     packages:
-    - libzmq-dev
+    - libzmq3-dev
 
 before_install:
   - go get -u golang.org/x/tools/cmd/vet
