--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
-# Use the (faster) container-based infrastructure, see also
-# http://docs.travis-ci.com/user/workers/container-based-infrastructure/
-sudo: false
+# Use “sudo: false” once https://github.com/travis-ci/travis-ci/issues/5695 is
+# resolved.
+sudo: required
+dist: trusty
 
 language: go
 
