--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,5 @@ script:
   - "gofmt -l $(find . -name '*.go' | tr '\\n' ' ') >/dev/null"
   # Check whether files were not gofmt'ed.
   - "gosrc=$(find . -name '*.go' | tr '\\n' ' '); [ $(gofmt -l $gosrc 2>&- | wc -l) -eq 0 ] || (echo 'gofmt was not run on these files:'; gofmt -l $gosrc 2>&-; false)"
-  - go vet ./...
+# TODO(stapelberg): re-enable after switching to gRPC
+#  - go vet ./...
