--- a/dcs-index-backend.service
+++ b/dcs-index-backend.service
@@ -4,7 +4,10 @@
 Description=Debian Code Search: index backend
 
 [Service]
-ExecStart=/usr/bin/dcs-index-backend -index_path=/dcs-ssd/unpacked/full.idx
+ExecStart=/usr/bin/dcs-index-backend \
+  -index_path=/dcs-ssd/unpacked/full.idx \
+  -tls_cert_path=/usr/share/dcs/prod-cert.pem \
+  -tls_key_path=/usr/share/dcs/prod-key.pem
 
 [Install]
 WantedBy=multi-user.target
