--- a/dcs-source-backend.service
+++ b/dcs-source-backend.service
@@ -8,7 +8,10 @@ After=postgresql.service
 # Increase the maximum number of file descriptors since each query uses up to
 # 1000 goroutines, and each of these inherits file descriptors.
 LimitNOFILE=16384
-ExecStart=/usr/bin/dcs-source-backend -unpacked_path=/dcs-ssd/unpacked/
+ExecStart=/usr/bin/dcs-source-backend \
+  -unpacked_path=/dcs-ssd/unpacked/ \
+  -tls_cert_path=/usr/share/dcs/prod-cert.pem \
+  -tls_key_path=/usr/share/dcs/prod-key.pem
 
 [Install]
 WantedBy=multi-user.target
