dcs-compute-ranking: use popcon data directly, output to JSON
Before this commit, dcs-compute-ranking would read from a local UDD
mirror and write to a local DCS-specific database.

In the next commit, the source backend will change to read from the
local ranking (but first this commit needs to be pushed so that the data
exists).

see issue #67

--- a/dcs-update-ranking.service
+++ b/dcs-update-ranking.service
@@ -2,14 +2,8 @@
 
 [Unit]
 Description=Debian Code Search: update ranking
-After=postgresql.service
 
 [Service]
 Restart=no
 Type=oneshot
-ExecStart=/usr/bin/wget -q http://udd.debian.org/udd-popcon.sql.xz -O /tmp/popcon.sql.xz
-ExecStart=/bin/sh -c "echo 'DROP TABLE popcon; DROP TABLE popcon_src;' | psql udd"
-ExecStart=/bin/sh -c "xz -d -c /tmp/popcon.sql.xz | psql udd"
-ExecStart=/bin/sh -c "psql dcs < /usr/share/dcs/schema.sql"
-ExecStart=/usr/bin/dcs-compute-ranking \
-	-mirror_url=http://http.debian.net/debian
+ExecStart=/usr/bin/dcs-compute-ranking
