dcs-feeder.service: update internal DNS records
With the removal of purpose-bound DNS records (int-dcsi-importer-0) in
favor of generic DNS records (int-dcsi-index-0) with ports, this config
file needed to be updated.

--- a/dcs-feeder.service
+++ b/dcs-feeder.service
@@ -5,7 +5,7 @@ Description=Debian Code Search: package feeder
 
 [Service]
 ExecStart=/usr/bin/dcs-feeder \
-	-shards=int-dcsi-importer-0.rackspace.zekjur.net:21010,int-dcsi-importer-1.rackspace.zekjur.net:21010,int-dcsi-importer-2.rackspace.zekjur.net:21010,int-dcsi-importer-3.rackspace.zekjur.net:21010,int-dcsi-importer-4.rackspace.zekjur.net:21010,int-dcsi-importer-5.rackspace.zekjur.net:21010
+	-shards=int-dcsi-index-0.rackspace.zekjur.net:21010,int-dcsi-index-1.rackspace.zekjur.net:21010,int-dcsi-index-2.rackspace.zekjur.net:21010,int-dcsi-index-3.rackspace.zekjur.net:21010,int-dcsi-index-4.rackspace.zekjur.net:21010,int-dcsi-index-5.rackspace.zekjur.net:21010
 
 [Install]
 WantedBy=multi-user.target
