--- a/nginx.example
+++ b/nginx.example
@@ -49,8 +49,8 @@ server {
 }
 
 server {
-    listen   443 ssl;
-    listen   [::]:443 ssl ipv6only=on;
+    listen   443 ssl http2;
+    listen   [::]:443 ssl http2 ipv6only=on;
 
     ssl_certificate /etc/letsencrypt/live/codesearch.debian.net/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/codesearch.debian.net/privkey.pem;
