static assets: accept yuicompressor as alias for yui-compressor
When installing yuicompressor from Homebrew, it’s called yuicompressor.

--- a/static/Makefile
+++ b/static/Makefile
@@ -6,8 +6,8 @@ all: instant.min.js.gz reconnecting-websocket.min.js.gz debcodesearch.min.css.gz
 
 %.min.js: %.js
 	echo "MINIFY $<"
-	slimit -m $< > $@ || yui-compressor -o $@ $<
+	slimit -m $< > $@ || yui-compressor -o $@ $< || yuicompressor -o $@ $<
 
 debcodesearch.min.css: debian.css debcodesearch.css
 	echo "MINIFY $^"
-	(cat $^) | yui-compressor --type css > $@ || (cat $^) | perl -MCSS::Minifier -E 'open(IN, "<", "/dev/stdin"); say CSS::Minifier::minify(input => *IN)' > $@
+	(cat $^) | yui-compressor --type css > $@ || (cat $^) | yuicompressor --type css > $@ || (cat $^) | perl -MCSS::Minifier -E 'open(IN, "<", "/dev/stdin"); say CSS::Minifier::minify(input => *IN)' > $@
