--- a/nginx.example
+++ b/nginx.example
@@ -93,8 +93,36 @@ server {
 
     gzip on;
     gzip_comp_level 6;
-    gzip_types *;
     gzip_proxied any;
+    # An up-to-date list can be found at:
+    # https://github.com/h5bp/server-configs-nginx/blob/master/nginx.conf
+    # Compress all output labeled with one of the following MIME-types.
+    gzip_types
+      application/atom+xml
+      application/javascript
+      application/json
+      application/ld+json
+      application/manifest+json
+      application/rss+xml
+      application/vnd.geo+json
+      application/vnd.ms-fontobject
+      application/x-font-ttf
+      application/x-web-app-manifest+json
+      application/xhtml+xml
+      application/xml
+      font/opentype
+      image/bmp
+      image/svg+xml
+      image/x-icon
+      text/cache-manifest
+      text/css
+      text/plain
+      text/vcard
+      text/vnd.rim.location.xloc
+      text/vtt
+      text/x-component
+      text/x-cross-domain-policy;
+    # text/html is always compressed by gzip module
 
     location /nginx_status {
         auth_basic off;
