big client refactoring for faster page loads
There are a couple of high-level changes which all contribute to
decreasing the page load time, both for initial page loads and for any
subsequent page loads (with cached assets):

1. Instead of having the /search?q=query endpoint serve a non-javascript
   version with javascript that redirects to /results/query/page_0, the
   response now is used for both non-javascript and javascript: all
   javascript-specific elements are hidden, all non-javascript elements
   are wrapped in <noscript>. This eliminates an entire round-trip for
   all requests that did not use the search form (e.g. requests from the
   URL bar, or people following links).

   The old URL patterns are redirected server-side, i.e. a request to
   /results/query/page_0 results in an HTTP 302 to /search?q=query. This
   keeps old URLs working.

2. All CSS which is required for the initial page rendering is now
   inlined in the responses (see static/critical.css). Previously we
   used to ship both debian.css and debcodesearch.css and let the
   browser apply the directives. critical.css however contains no
   ignored/superseded directives, bringing down the size of the
   stylesheet even more.

3. All further CSS has been moved to non-critical.css, which is loaded
   in a non-blocking way.

4. We are now using the EventSource API¹ instead of WebSockets (for
   browsers which don’t support EventSource, there is a fallback to
   WebSockets). The original motivation to use WebSockets was to
   eliminate the round-trip for submitting the search form. Structuring
   our application like that implied a single-page app.

   With the EventSource API, we no longer use a single-page app design,
   i.e. when submitting the search form, the browser actually navigates
   to /search?q=query. This simplifies the JavaScript code (we no longer
   need to do auto-complete state handling, for example) and makes the
   javascript/non-javascript serving in point 1 easier.

  

--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,20 @@ cmd/dcs-rs-cleanup/dcs-rs-cleanup
 cmd/dcs-index-backend/dcs-index-backend
 cmd/dcs-tail-fedmsg/dcs-tail-fedmsg
 cmd/dcs-source-backend/dcs-source-backend
+static/critical.min.css
+static/critical.min.css.gz
+static/cssrelpreload.min.js
+static/cssrelpreload.min.js.gz
 static/debcodesearch.min.css
 static/debcodesearch.min.css.gz
 static/instant.min.js
 static/instant.min.js.gz
 static/jquery.min.js.gz
-static/reconnecting-websocket.min.js
-static/reconnecting-websocket.min.js.gz
+static/loadCSS.min.js
+static/loadCSS.min.js.gz
+static/non-critical.min.css
+static/non-critical.min.css.gz
+static/url-search-params.min.js.gz
 static/Pics/openlogo-50.svg.gz
 static/Pics/rackspace.svg.gz
 debian/*.debhelper.log
