add a Service Worker to serve /search from cache
For more details about Service Workers, see
https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API

The new /placeholder.html handler serves the placeholder template with
inlined CSS and the %q%/%q_escaped% placeholders which will then be
replaced by the service worker javascript code with the current query.

instant.js registers the service worker, which will download assets to
cache and handle any subsequent requests to /search, getting rid of an
entire round trip.

fixes #69

--- a/nginx.example
+++ b/nginx.example
@@ -190,6 +190,10 @@ server {
         proxy_pass http://dcsweb;
     }
 
+    location /placeholder.html {
+        proxy_pass http://dcsweb;
+    }
+
     # Everything else must be a static page, so we directly deliver (with
     # appropriate caching headers).
     location /research/ {
