travis: vet is shipped with go1.6+

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,6 @@ addons:
     packages:
     - libzmq3-dev
 
-before_install:
-  - go get -u golang.org/x/tools/cmd/vet
-
 script:
   - go test ./...
   # Check whether files are syntactically correct.
@@ -23,4 +20,4 @@ script:
   # Check whether files were not gofmt'ed.
   - "gosrc=$(find . -name '*.go' | tr '\\n' ' '); [ $(gofmt -l $gosrc 2>&- | wc -l) -eq 0 ] || (echo 'gofmt was not run on these files:'; gofmt -l $gosrc 2>&-; false)"
 # TODO(stapelberg): re-enable after switching to gRPC
-#  - go vet ./...
+#  - go tool vet ./...
