--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ install:
 script:
   - go test $(go list ./... | grep -v /vendor/)
   # Check whether files are syntactically correct.
-  - "gofmt -l $(find . -path ./vendor -prune -o -name "*.go" -print | tr '\\n' ' ') >/dev/null"
+  - "gofmt -l $(find . -path ./vendor -prune -o -name '*.go' -print | tr '\\n' ' ') >/dev/null"
   # Check whether files were not gofmt'ed.
-  - "gosrc=$(find . -path ./vendor -prune -o -name "*.go" -print | tr '\\n' ' '); [ $(gofmt -l $gosrc 2>&- | wc -l) -eq 0 ] || (echo 'gofmt was not run on these files:'; gofmt -l $gosrc 2>&-; false)"
+  - "gosrc=$(find . -path ./vendor -prune -o -name '*.go' -print | tr '\\n' ' '); [ $(gofmt -l $gosrc 2>&- | wc -l) -eq 0 ] || (echo 'gofmt was not run on these files:'; gofmt -l $gosrc 2>&-; false)"
 # TODO(stapelberg): re-enable after switching to gRPC
 #  - go tool vet ./...
