--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -19,3 +19,7 @@
 # [[override]]
 #  name = "github.com/x/y"
 #  version = "2.4.0"
+
+[[constraint]]
+  name = "github.com/uber/jaeger"
+  version = "0.7.0"
