--- a/systemd/dcs-package-importer@.service
+++ b/systemd/dcs-package-importer@.service
@@ -1,4 +1,4 @@
-.include /lib/systemd/system/dcs-common.service
+.include dcs-common.service
 
 [Unit]
 Description=Debian Code Search: package importer
@@ -7,9 +7,12 @@ Description=Debian Code Search: package importer
 # Increase the maximum number of file descriptors since we need to open a
 # couple thousand index files when merging them together into a big shard.
 LimitNOFILE=8192
-ExecStart=/usr/bin/dcs-package-importer \
-  -tls_cert_path=/usr/share/dcs/prod-cert.pem \
-  -tls_key_path=/usr/share/dcs/prod-key.pem
+ExecStart=/srv/dcs/bin/dcs-package-importer \
+  -listen_address=localhost:2101%I \
+  -shard_path=/srv/dcs/shard%I \
+  -tls_cert_path=/srv/dcs/prod-cert.pem \
+  -tls_key_path=/srv/dcs/prod-key.pem \
+  -source_backend=localhost:2808%I
 
 [Install]
 WantedBy=multi-user.target
